--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -31,6 +31,9 @@
       <a href="{% url 'index' %}?order=due">Sort by Due Date</a> |
       <a href="{% url 'index' %}?order=post">Sort by Posted Date</a>
     </div>
+    <div>
+      <a href="{% url 'index' %}?filter=not">Filter Not Completed</a>
+    </div>
 
     {% for task in tasks %}
     <div class="text">
